t/tests: Parameterize package architecture in single binary packages previously hardcoding 'all'.
Test producing multiple binary packages will have to be split manually, if possible.

--- a/t/tests/fields-orphaned-package-not-maintained-in-debian-infrastructure-fp/debian/debian/control.in
+++ b/t/tests/fields-orphaned-package-not-maintained-in-debian-infrastructure-fp/debian/debian/control.in
@@ -9,7 +9,7 @@ Vcs-Git: https://git.dgit.debian.org/python-ofxhome
 Vcs-Browser: https://browse.dgit.debian.org/python-ofxhome.git
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
