--- a/t/tests/java-class-format/debian/debian/control.in
+++ b/t/tests/java-class-format/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}, javahelper, default-jdk-headless | default-jdk
 Rules-Requires-Root: no
 
 Package: libtest-java
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to test various aspects of the
