--- a/t/tests/cruft-package-does-not-install-examples-symlink/debian/debian/control.in
+++ b/t/tests/cruft-package-does-not-install-examples-symlink/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: Has a symlink to examples
  This is a test package designed to exercise some feature or tag of
