--- a/t/tests/deb-format-udeb-compression/debian/debian/control.in
+++ b/t/tests/deb-format-udeb-compression/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: some-udeb
-Architecture: all
+Architecture: ${package_architecture}
 Depends: $\{misc:Depends\}
 Package-Type: udeb
 Description: {$description}
