--- a/t/tests/debhelper-compat-virtual-relation-both/debian/debian/control.in
+++ b/t/tests/debhelper-compat-virtual-relation-both/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 11.3.6~), debhelper-compat (= 10)
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
