--- a/t/tests/debhelper-package-does-not-use-debhelper-or-cdbs/debian/debian/control.in
+++ b/t/tests/debhelper-package-does-not-use-debhelper-or-cdbs/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: binary-targets
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
