--- a/t/tests/fields-redundant/debian/debian/control.in
+++ b/t/tests/fields-redundant/debian/debian/control.in
@@ -9,7 +9,7 @@ Bugs: debbugs://bugs.debian.org/
 Origin: debian
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
