--- a/t/tests/fields-transitional/debian/debian/control.in
+++ b/t/tests/fields-transitional/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\},
          some-replacement
 Description: {$description}
