--- a/t/tests/fields-udeb/debian/debian/control.in
+++ b/t/tests/fields-udeb/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Package-Type: udeb
 Depends: $\{misc:Depends\},
 Installer-Menu-Item: network
