--- a/t/tests/fields-unknown-fields/debian/debian/control.in
+++ b/t/tests/fields-unknown-fields/debian/debian/control.in
@@ -9,7 +9,7 @@ Rules-Requires-Root: no
 XS-Comment: This is random comment ending up in the dsc file.
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\},
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
