--- a/t/tests/files-python-module-has-overly-generic-name/debian/debian/control.in
+++ b/t/tests/files-python-module-has-overly-generic-name/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: python3-foo
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\},
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
