--- a/t/tests/lintian-output-colons/debian/debian/control.in
+++ b/t/tests/lintian-output-colons/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}, libssl0.9.8 (>= 0abcd)
 Essential:yes
 Section: {$section}
