--- a/t/tests/python-depends-python2-and-python3/debian/debian/control.in
+++ b/t/tests/python-depends-python2-and-python3/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: python3-{$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}, python:any, python3:any, python2.7
 Description: Depends on both Python 2.x and Python 3.x
  This is a test package designed to exercise some feature or tag of
