--- a/t/tests/python-old-python-version-field/debian/debian/control.in
+++ b/t/tests/python-old-python-version-field/debian/debian/control.in
@@ -9,7 +9,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: not-{$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
