--- a/t/tests/python-package-missing-depends-on-python/debian/debian/control.in
+++ b/t/tests/python-package-missing-depends-on-python/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}
 Rules-Requires-Root: no
 
 Package: python3-{$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: Python package with no Python dependencies
  This is a test package designed to exercise some feature or tag of
