--- a/t/tests/rules-unnecessary-source-date-epoch/debian/debian/control.in
+++ b/t/tests/rules-unnecessary-source-date-epoch/debian/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: dpkg-dev (>= 1.18.7), debhelper (>= 10.9)
 Rules-Requires-Root: no
 
 Package: {$source}
-Architecture: all
+Architecture: {$package_architecture}
 Depends: $\{misc:Depends\}
 Description: Test package
  This is a test package designed to exercise some feature or tag of
