--- a/t/source/cruft-ancient-file/Makefile.in
+++ b/t/source/cruft-ancient-file/Makefile.in
@@ -4,16 +4,10 @@ dir  = $(name)-1.0
 all:
 	-mkdir $(dir)
 	rm -rf $(dir)/debian/
-	echo 'Some upstream README' > $(dir)/README
+	cp -rp orig/. $(dir)/
 	env TZ=GMT touch -d@-1 $(dir)/README
 	tar -c -f $(name)_1.0.orig.tar.gz -z $(dir)
-	-mkdir $(dir)/debian
-	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	echo '# foo' > $(dir)/debian/watch
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
+	cp -rp debian/ $(dir)/
 	dpkg-source -sp -b $(dir)
 
 clean:
