--- a/t/source/debconf-traversal/Makefile.in
+++ b/t/source/debconf-traversal/Makefile.in
@@ -3,12 +3,7 @@ dir  = $(name)-1
 
 all:
 	-mkdir $(dir)
-	-mkdir $(dir)/debian
-	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
+	cp -rp debian/ $(dir)/
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in | \
 	     perl -pe 's/\@NULL\@/\0/g' > $(name)_1.dsc
