--- a/t/source/debian-symlink/Makefile.in
+++ b/t/source/debian-symlink/Makefile.in
@@ -4,10 +4,7 @@ dir  = $(name)-1
 all:
 	-mkdir $(dir)
 	ln -sfn . $(dir)/debian
-	cp changelog copyright control rules $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
+	cp -rp debian/. $(dir)/debian
 	tar cfz $(name)_1.tar.gz $(dir)
 	subst-dsc $(name)_1.tar.gz < dsc.in > $(name)_1.dsc
 
