--- a/t/source/fields-src-fields-filename/Makefile.in
+++ b/t/source/fields-src-fields-filename/Makefile.in
@@ -4,12 +4,7 @@ dir  = $(dsc)-1
 
 all:
 	-mkdir $(dir)
-	-mkdir $(dir)/debian
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
+	cp -rp debian/ $(dir)/
 	tar cfz $(dsc)_1.tar.gz $(dir)
 	subst-dsc $(dsc)_1.tar.gz < dsc.in > $(dsc)_1.dsc
 	mv $(dsc)_1.dsc $(name)_1.dsc
