--- a/t/source/testsuite-inconsistent-field/Makefile.in
+++ b/t/source/testsuite-inconsistent-field/Makefile.in
@@ -3,12 +3,7 @@ dir  = $(name)-1.0
 
 all:
 	-mkdir $(dir)
-	-mkdir $(dir)/debian
-	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
+	cp -rp debian/ $(dir)/
 	dpkg-source -sn -b $(dir)
 	sed -i '/^Testsuite: /d' *.dsc
 
