--- a/t/source/unpack-srcpkg-dot-subdir/Makefile.in
+++ b/t/source/unpack-srcpkg-dot-subdir/Makefile.in
@@ -3,19 +3,10 @@ name = unpack-srcpkg-dot-subdir
 all:
 	-mkdir -p $(name)
 	rm -rf $(name)/debian/
-	echo 'Some upstream README' > $(name)/README
-	echo '/* some C program */' > $(name)/foo.c
-	echo '/* some header */' > $(name)/foo.h
 	tar -c -z -f $(name)_1.0.orig.tar.gz ./$(name)
-	-mkdir -p $(name)/debian
-	cp changelog copyright control rules $(name)/debian/
-	cp -R tests/ $(name)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(name)/debian/compat
-	echo > $(name)/debian/watch
-	-mkdir $(name)/debian/source
-	echo '{$source_format}' > $(name)/debian/source/format
+	cp -rp debian/ $(name)/
 	dpkg-source -sp -b $(name)
 
 clean:
 	rm -rf $(name)
-	rm -f $(name)_1.0* README foo.c foo.h
+	rm -f $(name)_1.0*
