--- a/t/source/unpack-srcpkg-xz/Makefile.in
+++ b/t/source/unpack-srcpkg-xz/Makefile.in
@@ -5,13 +5,8 @@ all:
 	-mkdir $(dir)
 	echo 'Some upstream README' > $(dir)/README
 	tar -c -f $(name)_1.0.orig.tar.xz --xz $(dir)
-	-mkdir $(dir)/debian
-	cp changelog copyright control rules $(dir)/debian/
-	cp -R tests/ $(dir)/debian/
-	echo $(DEFAULT_DH_COMPAT) > $(dir)/debian/compat
+	cp -rp debian/ $(dir)/
 	touch $(dir)/debian/watch
-	-mkdir $(dir)/debian/source
-	echo '{$source_format}' > $(dir)/debian/source/format
 	echo 'Information about patching' > $(dir)/debian/README.source
 	dpkg-source -sp -b $(dir)
 
