data/description/planned-features: Add "is planned" and "is also planned"
Excerpt from the long description of fonts-ibm-plex/1.1.6-1 which
triggered this addition:

  Support for Arabic, Devanagari, Thai and CJK is planned.

--- a/t/tests/description-mentions-planned-features/debian/debian/control.in
+++ b/t/tests/description-mentions-planned-features/debian/debian/control.in
@@ -21,3 +21,5 @@ Description: {$description}
  Foo will soon be able something.
  Foo will soon support something.
  Foo SOON WILL SUPPORT something.
+ Support for foo is planned.
+ Support is also planned for foo.
