--- a/t/tests/files-multiarch-foreign-files/debian/rules
+++ b/t/tests/files-multiarch-foreign-files/debian/rules
@@ -1,12 +1,6 @@
 #!/usr/bin/make -f
 
-ifeq ($(DEB_BUILD_ARCH), x86_64-linux-gnu)
-	ARCH=i386-linux-gnu
-else
-	ARCH=x86_64-linux-gnu
-endif
-
-DESTDIR = debian/$(shell dh_listpackages)/usr/lib/$(ARCH)
+DESTDIR = debian/$(shell dh_listpackages)/usr/lib/$(DEB_HOST_MULTIARCH)
 
 %:
 	dh $@
