Fix two typos introduced when parameterising test architectures in 9e128d0 & fd01abb. (MR: !79) (Closes: #914952)
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/binaries-missing-lfs/debian/control.in
+++ b/t/tests/binaries-missing-lfs/debian/control.in
@@ -7,7 +7,7 @@ Build-Depends: {$build_depends}, perl
 Rules-Requires-Root: no
 
 Package: libbasic2
-Architecture: ${package_architecture}
+Architecture: {$package_architecture}
 Section: libs
 Depends: $\{misc:Depends\}, $\{shlibs:Depends\}
 Description: {$description}
