Do not use a global build stamp for tests in debian/rules. (MR: !80)
Using its Makefile semantics, debian/rules implements a build stamp
when tests are run without the option 'onlyrun'. It prevents needless
re-runs, but also blocks runs that should be allowed, for example when
only the test runner has changed. (The target 'runtests' depends on
many files, but not on the t/runtest executable or any of its
imports.) The mechanism is a complete obstacle to runner development.

This commit disables the mechanism.  The build stamp is no longer
written, and the 'runtest' target is declared PHONY.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/rules
+++ b/debian/rules
@@ -44,11 +44,11 @@ $(profiles): $(allchecks) $(autoreject_data) private/generate-profiles.pl
 api-doc:
 	private/generate-html-docs doc/api.html
 
+.PHONY: runtests
 runtests: $(neededfiles) $(allchecks) $(allcollect) $(tagfiles) $(testfiles)
 	@echo .... running tests ....
 	mkdir -p "$(TEST_WORK_DIR)"
 	t/runtests -k $(PAR_ARGS) t "$(TEST_WORK_DIR)" $(onlyrun)
-	if [ "$(onlyrun)" = "" ]; then touch $@; fi
 
 runtests-translation: $(neededfiles) $(allchecks)
 	@echo .... running translation tests ....
