Remove dynamic generation of watch file from builder Makefile.
For a long time, the Lintian test suite automatically created watch
files for non-native packages. That worked well, except in some corner
cases. Some tests compensated by removing the file in the pre_build
script.

This commit is part of a series that changes that mechanism. The watch
file is now supplied by a template set and removed right after the
templates are copied into a test's work directory.  The processing
takes place earlier. It allows tests deal with watch files like they
do with any other file that is (or is not) supplied by template sets.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/templates/tests/make-builder/Makefile.in
+++ b/t/templates/tests/make-builder/Makefile.in
@@ -13,27 +13,18 @@ formatfile = $(debiandata)/source/format
 diffdata = diff
 
 packagedebiandir = $(packagedir)/debian
-watchfile = $(packagedir)/debian/watch
 
 product = $(package)_{$no_epoch}_{$host_architecture}.changes
 
 .DEFAULT_GOAL := product
 
-product: $(watchfile) $(origtargz)
+product: $(origtargz)
 	-mkdir -p $(diffdata)
 	cp -rp $(diffdata)/. $(packagedir)
 	-mkdir -p $(debiandata)
 	cp -rp $(debiandata)/. $(packagedebiandir)
 	if [ -x ./pre_build ] ; then ./pre_build $(shell realpath $(packagedir)) ; fi
 	cd $(packagedir) && dpkg-buildpackage -rfakeroot -us -uc -d -iNEVER_MATCH_ANYTHING -INEVER_MATCH_ANYTHING --source-option=--auto-commit
-
-ifeq ($(type),native)
-$(watchfile): $(origtargz)
-else
-$(watchfile): $(origtargz)
-	-mkdir -p $(packagedebiandir)
-	if [ ! -f $(watchfile) ] ; then echo '# Empty watch file' > $(watchfile) ; fi
-endif
 
 ifeq ($(type),native)
 $(origtargz): clean
