Parameterise the distribution in the 'pedantic' changelog template.
The 'pedantic' template set had a hardcoded distribution.  The
changelog file from the 'default' set was instead imported for further
use.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/templates/tests/pedantic/changelog.in
+++ b/t/templates/tests/pedantic/changelog.in
@@ -1,4 +1,4 @@
-{$source} ({$version}) unstable; urgency=low
+{$source} ({$version}) {$distribution}; urgency=low
 
   * Lintian Test Suite.
   * Test: {$testname}
