Add libcapture-tiny-perl and libtry-tiny-perl to Build-Depends.
Suffient versions of both new dependencies seem to be available as far
back as stable.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -35,6 +35,7 @@ Build-Depends: aspell <!nocheck>,
                javahelper <!nocheck>,
                libapt-pkg-perl <!nocheck>,
                libarchive-zip-perl <!nocheck>,
+               libcapture-tiny-perl <!nocheck>,
                libcgi-pm-perl <!nocheck>,
                libclass-accessor-perl <!nocheck>,
                libclone-perl <!nocheck>,
@@ -59,6 +60,7 @@ Build-Depends: aspell <!nocheck>,
                libtext-levenshtein-perl <!nocheck>,
                libtext-template-perl <!nocheck>,
                libtimedate-perl <!nocheck>,
+               libtry-tiny-perl <!nocheck>,
                libunicode-utf8-perl <!nocheck>,
                liburi-perl <!nocheck>,
                libyaml-libyaml-perl <!nocheck>,
