Change to Arch:all to avoid package-contains-no-arch-dependent-files.
The detection of arch-dependent files in checks/files.pm now excludes
executable ASCII files. For this test package holding an app, it
seemed appropriate to change the Architecture to 'all'.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/shared-libs-ldconfig-scripts/debian/control.in
+++ b/t/tests/shared-libs-ldconfig-scripts/debian/control.in
@@ -37,7 +37,7 @@ Description: {$description} (unsafe ldc)
  Checks for unsafe ldconfig usage scripts.
 
 Package: app
-Architecture: any
+Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description} (useless ldc)
  This is a test package designed to exercise some feature or tag of
