Add gpg and gpg-agent to Build-Depends.
Both are available in stretch-backports. /usr/bin/gpg-agent was also
available in the original stretch. Both package names have changed
since then but the present names were already available in stretch via
virtual packages. This commit uses the current package name from
unstable.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,8 @@ Build-Depends: aspell <!nocheck>,
                fakeroot <!nocheck>,
                file <!nocheck>,
                gettext <!nocheck>,
+               gpg <!nocheck>,
+               gpg-agent <!nocheck>,
                intltool-debian <!nocheck>,
                javahelper <!nocheck>,
                libapt-pkg-perl <!nocheck>,
