Make version-substvar-for-external-package require versioned provides. (Closes: #833608)
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/version-substvars-general/debian/control.in
+++ b/t/tests/version-substvars-general/debian/control.in
@@ -11,7 +11,7 @@ Architecture: any
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\},
          program-data (= $\{binary:Version\}),
          program-data-extra (= $\{source:Version\})
-Provides: provided-package
+Provides: provided-package (= $\{binary:Version\})
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
