wrap-and-sort -sa.

--- a/debian/control
+++ b/debian/control
@@ -2,82 +2,81 @@ Source: lintian
 Section: devel
 Priority: optional
 Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Uploaders: Josip Rodin <joy-packages@debian.org>,
-           Colin Watson <cjwatson@debian.org>,
-           Russ Allbery <rra@debian.org>,
-           Adam D. Barratt <adam@adam-barratt.org.uk>,
-           Raphael Geissert <geissert@debian.org>,
-           Bastien Roucariès <roucaries.bastien+debian@gmail.com>,
-           Axel Beckert <abe@debian.org>,
-           Chris Lamb <lamby@debian.org>,
-Build-Depends: aspell <!nocheck>,
-               aspell-en <!nocheck>,
-               binutils <!nocheck>,
-               bzip2 <!nocheck>,
-               cdbs <!nocheck>,
-               debhelper (>= 11~),
-# Prefer the headless variant as it saves about 25% (installed-size), but
-# it is not available in Jessie.
-               default-jdk-headless <!nocheck> | default-jdk <!nocheck>,
-# Use bash as a Jessie indicator (dh-elpa is only used for a test)
-               dh-elpa <!nocheck> | bash (<< 4.4) <!nocheck>,
-               dh-python <!nocheck>,
-               diffstat <!nocheck>,
-               docbook-utils,
-               docbook-xml,
-               dpkg (>= 1.17.14),
-               fakeroot <!nocheck>,
-               file <!nocheck>,
-               gettext <!nocheck>,
-               gpg <!nocheck>,
-               gpg-agent <!nocheck>,
-               intltool-debian <!nocheck>,
-               javahelper <!nocheck>,
-               libapt-pkg-perl <!nocheck>,
-               libarchive-zip-perl <!nocheck>,
-               libcapture-tiny-perl <!nocheck>,
-               libcgi-pm-perl <!nocheck>,
-               libclass-accessor-perl <!nocheck>,
-               libclone-perl <!nocheck>,
-               libdpkg-perl <!nocheck>,
-               libdigest-sha-perl <!nocheck>,
-               libemail-valid-perl <!nocheck>,
-               libfile-basedir-perl <!nocheck>,
-               libfile-find-rule-perl <!nocheck>,
-               libhtml-parser-perl <!nocheck>,
-               libipc-run-perl <!nocheck>,
-               libio-async-perl <!nocheck>,
-               liblist-moreutils-perl <!nocheck>,
-               libparse-debianchangelog-perl <!nocheck>,
-               libpath-tiny-perl <!nocheck>,
-               libtest-minimumversion-perl <!nocheck>,
-               libtest-perl-critic-perl <!nocheck>,
-               libtest-pod-coverage-perl <!nocheck>,
-               libtest-pod-perl <!nocheck>,
-               libtest-spelling-perl <!nocheck>,
-               libtest-strict-perl <!nocheck>,
-               libtest-synopsis-perl <!nocheck>,
-               libtext-levenshtein-perl <!nocheck>,
-               libtext-template-perl <!nocheck>,
-               libtimedate-perl <!nocheck>,
-               libtry-tiny-perl <!nocheck>,
-               libunicode-utf8-perl <!nocheck>,
-               liburi-perl <!nocheck>,
-               libyaml-libyaml-perl <!nocheck>,
-               libxml-simple-perl <!nocheck>,
-               man-db <!nocheck>,
-               node-uglify <!nocheck>,
-               patchutils <!nocheck>,
-               perl <!nocheck>,
-               pkg-php-tools <!nocheck>,
-               python <!nocheck>,
-               python-all-dev <!nocheck>,
-               python-numpy <!nocheck>,
-               quilt <!nocheck>,
-               t1utils <!nocheck>,
-               unzip <!nocheck>,
-               xz-utils <!nocheck>,
-               zip <!nocheck>,
+Uploaders:
+ Josip Rodin <joy-packages@debian.org>,
+ Colin Watson <cjwatson@debian.org>,
+ Russ Allbery <rra@debian.org>,
+ Adam D. Barratt <adam@adam-barratt.org.uk>,
+ Raphael Geissert <geissert@debian.org>,
+ Bastien Roucariès <roucaries.bastien+debian@gmail.com>,
+ Axel Beckert <abe@debian.org>,
+ Chris Lamb <lamby@debian.org>,
+Build-Depends:
+ aspell <!nocheck>,
+ aspell-en <!nocheck>,
+ binutils <!nocheck>,
+ bzip2 <!nocheck>,
+ cdbs <!nocheck>,
+ debhelper (>= 11~),
+ default-jdk-headless <!nocheck> | default-jdk <!nocheck>,
+ dh-elpa <!nocheck> | bash (<< 4.4) <!nocheck>,
+ dh-python <!nocheck>,
+ diffstat <!nocheck>,
+ docbook-utils,
+ docbook-xml,
+ dpkg (>= 1.17.14),
+ fakeroot <!nocheck>,
+ file <!nocheck>,
+ gettext <!nocheck>,
+ gpg <!nocheck>,
+ gpg-agent <!nocheck>,
+ intltool-debian <!nocheck>,
+ javahelper <!nocheck>,
+ libapt-pkg-perl <!nocheck>,
+ libarchive-zip-perl <!nocheck>,
+ libcapture-tiny-perl <!nocheck>,
+ libcgi-pm-perl <!nocheck>,
+ libclass-accessor-perl <!nocheck>,
+ libclone-perl <!nocheck>,
+ libdigest-sha-perl <!nocheck>,
+ libdpkg-perl <!nocheck>,
+ libemail-valid-perl <!nocheck>,
+ libfile-basedir-perl <!nocheck>,
+ libfile-find-rule-perl <!nocheck>,
+ libhtml-parser-perl <!nocheck>,
+ libio-async-perl <!nocheck>,
+ libipc-run-perl <!nocheck>,
+ liblist-moreutils-perl <!nocheck>,
+ libparse-debianchangelog-perl <!nocheck>,
+ libpath-tiny-perl <!nocheck>,
+ libtest-minimumversion-perl <!nocheck>,
+ libtest-perl-critic-perl <!nocheck>,
+ libtest-pod-coverage-perl <!nocheck>,
+ libtest-pod-perl <!nocheck>,
+ libtest-spelling-perl <!nocheck>,
+ libtest-strict-perl <!nocheck>,
+ libtest-synopsis-perl <!nocheck>,
+ libtext-levenshtein-perl <!nocheck>,
+ libtext-template-perl <!nocheck>,
+ libtimedate-perl <!nocheck>,
+ libtry-tiny-perl <!nocheck>,
+ libunicode-utf8-perl <!nocheck>,
+ liburi-perl <!nocheck>,
+ libxml-simple-perl <!nocheck>,
+ libyaml-libyaml-perl <!nocheck>,
+ man-db <!nocheck>,
+ node-uglify <!nocheck>,
+ patchutils <!nocheck>,
+ perl <!nocheck>,
+ pkg-php-tools <!nocheck>,
+ python <!nocheck>,
+ python-all-dev <!nocheck>,
+ python-numpy <!nocheck>,
+ quilt <!nocheck>,
+ t1utils <!nocheck>,
+ unzip <!nocheck>,
+ xz-utils <!nocheck>,
+ zip <!nocheck>,
 Standards-Version: 4.2.1
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/lintian/lintian.git
@@ -86,48 +85,51 @@ Homepage: https://lintian.debian.org/
 
 Package: lintian
 Architecture: all
-Depends: binutils,
-         bzip2,
-         diffstat,
-         dpkg (>= 1.17.14),
-         dpkg-dev,
-         file,
-         gettext,
-         gpg,
-         intltool-debian,
-         libapt-pkg-perl,
-         libarchive-zip-perl,
-         libcgi-pm-perl,
-         libclass-accessor-perl,
-         libclone-perl,
-         libdigest-sha-perl,
-         libdpkg-perl,
-         libemail-valid-perl,
-# libfile-basedir-perl is deliberately *not* installed on our archive-wide
-# processing host
-         libfile-basedir-perl,
-         libipc-run-perl,
-         liblist-moreutils-perl,
-         libparse-debianchangelog-perl,
-         libtext-levenshtein-perl,
-         libtimedate-perl,
-         liburi-perl,
-         libyaml-libyaml-perl,
-         libxml-simple-perl,
-         man-db,
-         patchutils,
-         perl,
-         t1utils,
-         xz-utils,
-         ${misc:Depends},
-         ${perl:Depends},
-Recommends: libperlio-gzip-perl,
-Suggests: binutils-multiarch,
-          libhtml-parser-perl,
-          libtext-template-perl,
-Breaks: funny-manpages (<< 1.3-5.1),
-        pkg-perl-tools (<< 0.23)
-Replaces: funny-manpages (<< 1.3-5.1)
+Depends:
+ binutils,
+ bzip2,
+ diffstat,
+ dpkg (>= 1.17.14),
+ dpkg-dev,
+ file,
+ gettext,
+ gpg,
+ intltool-debian,
+ libapt-pkg-perl,
+ libarchive-zip-perl,
+ libcgi-pm-perl,
+ libclass-accessor-perl,
+ libclone-perl,
+ libdigest-sha-perl,
+ libdpkg-perl,
+ libemail-valid-perl,
+ libfile-basedir-perl,
+ libipc-run-perl,
+ liblist-moreutils-perl,
+ libparse-debianchangelog-perl,
+ libtext-levenshtein-perl,
+ libtimedate-perl,
+ liburi-perl,
+ libxml-simple-perl,
+ libyaml-libyaml-perl,
+ man-db,
+ patchutils,
+ perl,
+ t1utils,
+ xz-utils,
+ ${misc:Depends},
+ ${perl:Depends},
+Recommends:
+ libperlio-gzip-perl,
+Suggests:
+ binutils-multiarch,
+ libhtml-parser-perl,
+ libtext-template-perl,
+Breaks:
+ funny-manpages (<< 1.3-5.1),
+ pkg-perl-tools (<< 0.23),
+Replaces:
+ funny-manpages (<< 1.3-5.1),
 Multi-Arch: foreign
 Description: Debian package checker
  Lintian dissects Debian packages and reports bugs and policy
