Clarify that spaces are valid in variable assignments. (Closes: #917120)

--- a/doc/lintianrc.example
+++ b/doc/lintianrc.example
@@ -10,6 +10,8 @@
 #    VAR=text
 # or
 #    VAR="text"
+# or
+#    VAR = text
 # It is allowed to use `~' and `$HOME' in the variables, but not other
 # shell/environment variables.
 
