--- a/t/templates/tests-pedantic/control.in
+++ b/t/templates/tests-pedantic/control.in
@@ -9,6 +9,7 @@ Homepage: https://lintian.debian.org/
 
 Package: {$source}
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
