--- a/t/tests/files-bad-perm-owner/debian/control.in
+++ b/t/tests/files-bad-perm-owner/debian/control.in
@@ -8,6 +8,7 @@ Rules-Requires-Root: binary-targets
 
 Package: binary
 Architecture: all
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
