--- a/t/tests/init.d-lsb-headers/debian/control.in
+++ b/t/tests/init.d-lsb-headers/debian/control.in
@@ -8,6 +8,7 @@ Rules-Requires-Root: no
 
 Package: {$source}
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description}
  This is a test package designed to exercise some feature or tag of
@@ -16,6 +17,7 @@ Description: {$description}
 
 Package: {$source}-parsing
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- headers parsing
  This is a test package designed to exercise the parsing of init scripts
@@ -24,6 +26,7 @@ Description: {$description} -- headers parsing
 
 Package: {$source}-remote
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- using /usr files
  This is a test package designed to exercise the checking of init scripts
@@ -32,6 +35,7 @@ Description: {$description} -- using /usr files
 
 Package: {$source}-length
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- breaking length assumptions
  Test package designed to exercise the checking of init
@@ -40,6 +44,7 @@ Description: {$description} -- breaking length assumptions
 
 Package: {$source}-local
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- using /var files
  This is another test package designed to exercise the checking of init
@@ -48,6 +53,7 @@ Description: {$description} -- using /var files
 
 Package: {$source}-missing
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- missing runlevels
  This is yet another test package designed to exercise the checking of
@@ -56,6 +62,7 @@ Description: {$description} -- missing runlevels
 
 Package: {$source}-virtual
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- virtual facilities
  Test package to exercise the virtual facilities in init.d scripts
@@ -64,6 +71,7 @@ Description: {$description} -- virtual facilities
 
 Package: {$source}-all
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- all virtual facilities
  Test package designed to exercise the checking of virtual all facilities
@@ -73,6 +81,7 @@ Description: {$description} -- all virtual facilities
 
 Package: {$source}-early-boot
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} -- false positive
  This is yet another test package designed to exercise the checking of
