--- a/t/tests/systemd-missing-services/debian/control.in
+++ b/t/tests/systemd-missing-services/debian/control.in
@@ -8,6 +8,7 @@ Rules-Requires-Root: no
 
 Package: {$source}-with
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} - with .service file
  This is a test package designed to exercise some feature or tag of
@@ -19,6 +20,7 @@ Description: {$description} - with .service file
 
 Package: {$source}-without
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} - without .service file
  This is a test package designed to exercise some feature or tag of
@@ -30,6 +32,7 @@ Description: {$description} - without .service file
 
 Package: {$source}-without-rcs
 Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
 Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
 Description: {$description} - rcS script without .service file
  This is a test package designed to exercise some feature or tag of
