Fix a python-related test after debhelper bump.
A python-related test now requires the explicit declaration of a
build system.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/binaries-missing-depends-on-numpy-abi/debian/rules
+++ b/t/tests/binaries-missing-depends-on-numpy-abi/debian/rules
@@ -4,5 +4,4 @@ export DEB_BUILD_MAINT_OPTIONS=hardening=+all,-pie
 export DEB_LDFLAGS_MAINT_APPEND=-Wl,--no-as-needed
 
 %:
-	dh $@
-
+	dh $@ --buildsystem pybuild
