Fix test conffiles-general for debhelper 12.
The functionality of debian/conffiles was disabled in debhelper 12.
Moves the file into DEBIAN manually before building the deb.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/conffiles-general/debian/rules
+++ b/t/tests/conffiles-general/debian/rules
@@ -7,4 +7,6 @@ pkg=conffiles-general
 override_dh_builddeb:
 	mkdir -p debian/$(pkg)/etc/
 	echo "Hallo World" > debian/$(pkg)/etc/foo
+	mkdir -p debian/$(pkg)/DEBIAN
+	cp debian/conffiles debian/$(pkg)/DEBIAN
 	dpkg-deb --nocheck --build debian/$(pkg) ../$(pkg)_1.0_all.deb
