--- a/t/tests/fields-mua/debian/control.in
+++ b/t/tests/fields-mua/debian/control.in
@@ -4,7 +4,7 @@ Section: {$section}
 Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends:
- debhelper (>= 11),
+ debhelper (>= {$dh_compat_level}~),
  default-mta | mail-transport-agent,
  default-mta
 Rules-Requires-Root: no
