Override dh_dwz in two tests that fail because of it.
Someone with more gcc experience may be able to correct the debug
format for the two tests. For now, dwz was non-essential. It was
disabled.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/binaries-missing-depends-on-xapi/debian/rules
+++ b/t/tests/binaries-missing-depends-on-xapi/debian/rules
@@ -13,3 +13,5 @@ override_dh_builddeb:
 	rm -f debian/*/DEBIAN/triggers
 	dh_builddeb
 
+# errors out with: objcopy: '.../binaries-missing-depends-on-xapi.debug': No such file
+override_dh_dwz:
