Handle systemd service templates for missing init scripts
Do not emit the following errors when a systemd service template (a
NAME@.service file) matches a similar init script (a /etc/init.d/NAME):

 missing-systemd-service-for-init.d-script
 omitted-systemd-service-for-init.d-script

Assume that the systemd service template goes with the init script.

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/t/tests/systemd-missing-services/debian/control.in
+++ b/t/tests/systemd-missing-services/debian/control.in
@@ -18,6 +18,18 @@ Description: {$description} - with .service file
  .
  This package has a .service file for its initscript.
 
+Package: {$source}-template
+Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
+Depends: $\{misc:Depends\}, lsb-base (>= 3.0-6)
+Description: {$description} - with @.service template file
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+ .
+ This package has a @.service template file for its initscript.
+
 Package: {$source}-without
 Architecture: {$package_architecture}
 Pre-Depends: $\{misc:Pre-Depends\}
