--- a/t/tests/binaries-from-other-arch/debian/rules
+++ b/t/tests/binaries-from-other-arch/debian/rules
@@ -8,4 +8,5 @@ export DEB_BUILD_OPTIONS
 
 binary:
 	sh debian/dumpobj > debian/elfobject
+	sh debian/dumpobj > debian/fake-guile-object.go
 	dh binary
