Build-conflict with libperl-critic-pulp-perl <!nocheck>
If libperl-critic-pulp-perl is installed, several tests under
t/scripts/01-critic/ fail due to its additional perlcritic rules:

t/scripts/01-critic/checks.t:    Failed 1/58 subtests
t/scripts/01-critic/commands.t:  Failed  8/8 subtests
t/scripts/01-critic/lib.t:       Failed 3/52 subtests

--- a/debian/control
+++ b/debian/control
@@ -77,6 +77,8 @@ Build-Depends:
  unzip <!nocheck>,
  xz-utils <!nocheck>,
  zip <!nocheck>,
+Build-Conflicts:
+ libperl-critic-pulp-perl <!nocheck>,
 Standards-Version: 4.3.0
 Rules-Requires-Root: no
 Vcs-Git: https://salsa.debian.org/lintian/lintian.git
