Prevent a large number false-positives when checking "new style" init scripts that use "#!/usr/bin/env /lib/init/init-d-script" as their shebang. (Closes: #919604)

--- a/t/tests/init.d-general/debian/control.in
+++ b/t/tests/init.d-general/debian/control.in
@@ -48,3 +48,14 @@ Description: {$description} -- sourcing without test
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.
+
+Package: {$source}-new-style
+Architecture: {$package_architecture}
+Pre-Depends: $\{misc:Pre-Depends\}
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: {$description} -- "new style"
+ New style of init.d. (#919604)
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.
