--- a/t/templates/DEBIAN/changelog.in
+++ b/t/templates/DEBIAN/changelog.in
@@ -1,4 +1,4 @@
-{$source} ({$version}) unstable; urgency=low
+{$source} ({$version}) {$distribution}; urgency=low
 
   * Lintian Test Suite.
   * Test: {$testname}
@@ -6,3 +6,12 @@
   * Suppress "should close ITP bug" messages.  (Closes: #123456)
 
  -- {$author}  {$date}
+
+{$source} ({$prev_version}) {$distribution}; urgency=low
+
+  * Lintian Test Suite.
+  * Test: {$testname}
+
+  * Suppress "should close ITP bug" messages.  (Closes: #123456)
+
+ -- {$author}  {$prev_date}
