Permit "-b" branch specifications in Mercurial Vcs-Hg control fields. (Closes: #920355)

--- a/t/tests/fields-vcs-fields/debian/control.in
+++ b/t/tests/fields-vcs-fields/debian/control.in
@@ -8,7 +8,7 @@ Rules-Requires-Root: no
 Vcs-Browser: https://anonscm.debian.org/viewvc/foobar/trunk?rev=0&sc=0
 Vcs-Svn: svn://anonscm.debian.org/foobar/trunk
 Vcs-Mtn: www.example.org org.debian.foobar
-Vcs-Hg: https://anonscm.debian.org/hg/foobar/pkg/foobar
+Vcs-Hg: https://anonscm.debian.org/hg/foobar/pkg/foobar -b master
 Vcs-Git: https://anonscm.debian.org/users/djpig/foobar.git -b master
 Vcs-Cvs: :pserver:anonymous@anonscm.debian.org:/cvs/foobar module
 Vcs-Bzr: nosmart+http://anonscm.debian.org/bzr/collab-maint/foobar
