--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends:
  default-jdk-headless <!nocheck> | default-jdk <!nocheck>,
  dh-elpa <!nocheck> | bash (<< 4.4) <!nocheck>,
  dh-python <!nocheck>,
+ dh-runit <!nocheck>,
  diffstat <!nocheck>,
  docbook-utils,
  docbook-xml,
