Add Build-Depends: libxml-libxml-perl <!nocheck>.
A new utility called tagextact will use this to parse Lintian's XML
output format.

The library is recommended over libxml-simple-perl, which is already
on the list but reportedly buggy and dated.

This library is available all the way back to oo-stable.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -59,6 +59,7 @@ Build-Depends:
  libtry-tiny-perl <!nocheck>,
  libunicode-utf8-perl <!nocheck>,
  liburi-perl <!nocheck>,
+ libxml-libxml-perl <!nocheck>,
  libxml-simple-perl <!nocheck>,
  libyaml-libyaml-perl <!nocheck>,
  man-db <!nocheck>,
