Add Build-Depends: libtext-csv-perl <!nocheck>.
Two new utilities called tagextract and tagdiff will use this to parse
colon-based output from Lintian and also a new generalized format for
tags. The generalized format is necessary to automatically cycle
through various Lintian output formats.

This library is available all the way back to oo-stable.

Gpb-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Build-Depends:
  libtest-spelling-perl <!nocheck>,
  libtest-strict-perl <!nocheck>,
  libtest-synopsis-perl <!nocheck>,
+ libtext-csv-perl <!nocheck>,
  libtext-levenshtein-perl <!nocheck>,
  libtext-template-perl <!nocheck>,
  libtimedate-perl <!nocheck>,
