Add Build-Depends: libtext-diff-perl <!nocheck>.
A new utility called tagdiff uses this library to find differences
between expected and actual tags in the test suite. Tagdiff operates
on a new generalized format for tag information. That format became
necessary when cycling automatically through different Lintian output
formats.

This library is available all the way back to oo-stable.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -54,6 +54,7 @@ Build-Depends:
  libtest-strict-perl <!nocheck>,
  libtest-synopsis-perl <!nocheck>,
  libtext-csv-perl <!nocheck>,
+ libtext-diff-perl <!nocheck>,
  libtext-levenshtein-perl <!nocheck>,
  libtext-template-perl <!nocheck>,
  libtimedate-perl <!nocheck>,
