--- a/t/tags/tests/fields-uncanonical-salsa-vcs-fields/debian/control.in
+++ b/t/tags/tests/fields-uncanonical-salsa-vcs-fields/debian/control.in
@@ -5,7 +5,7 @@ Maintainer: {$author}
 Standards-Version: {$standards_version}
 Build-Depends: {$build_depends}
 Rules-Requires-Root: no
-Vcs-Git: https://salsa.debian.org/foo/bar
+Vcs-Git: https://salsa.debian.org/foo/bar.git.git.git.git
 Vcs-Browser: https://salsa.debian.org/foo/bar.git
 
 Package: {$source}
