--- a/debian/control
+++ b/debian/control
@@ -43,6 +43,7 @@ Build-Depends:
  libhtml-parser-perl <!nocheck>,
  libio-async-perl,
  libipc-run-perl <!nocheck>,
+ liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
  libparse-debianchangelog-perl <!nocheck>,
  libpath-tiny-perl <!nocheck>,
