Use new runtests options in debian/rules.
Not all the options are required, but they are listed explicitly
nonetheless. Also splits them out over multiple lines.

It looks like the target runtests-translation will not work, but it
may not have been used in a while.

Gbp-Dch: ignore

--- a/debian/rules
+++ b/debian/rules
@@ -47,14 +47,24 @@ api-doc:
 .PHONY: runtests
 runtests: $(neededfiles) $(allchecks) $(allcollect) $(tagfiles) $(testfiles)
 	@echo .... running tests ....
-	mkdir -p "$(TEST_WORK_DIR)"
-	t/bin/runtests -k $(PAR_ARGS) t "$(TEST_WORK_DIR)" $(onlyrun)
+	t/bin/runtests \
+		$(PAR_ARGS) \
+		$(onlyrun) \
+		--unattended \
+		--keep-going \
+		--work-dir="$(TEST_WORK_DIR)" \
+		t
 
 runtests-translation: $(neededfiles) $(allchecks)
 	@echo .... running translation tests ....
-	mkdir -p "$(TEST_WORK_DIR)"
-	t/bin/runtests -k $(PAR_ARGS) t "$(TEST_WORK_DIR)" \
-	  translation-check-descs
+	t/bin/runtests \
+		$(PAR_ARGS) \
+		$(onlyrun) \
+		--unattended \
+		--keep-going \
+		--work-dir="$(TEST_WORK_DIR)" \
+		t \
+		translation-check-descs
 
 # this target is only run manually
 refresh-perl-provides:
