Add post_build scripting capability to make-based builder for tests.
The missing tag checksum-count-mismatch-in-changes-file is most easily
implemented by changing the *.changes file after the upload was built.
Adds this capacity to the make-based builder.

Some tests from the old changes suite may be reimplemented with the
same technique.

Also moves the similar pre_build script to the same template
whitelist.

Gbp-Dch: ignore

--- a/t/templates/tests-make-builder/Makefile.in
+++ b/t/templates/tests-make-builder/Makefile.in
@@ -32,6 +32,7 @@ product: $(origtargz)
 	cp -rp $(debiandata)/. $(packagedir)/debian
 	if [ -x ./pre_build ] ; then ./pre_build $(shell realpath $(packagedir)) ; fi
 	cd $(packagedir) && dpkg-buildpackage -rfakeroot -us -uc -d -iNEVER_MATCH_ANYTHING -INEVER_MATCH_ANYTHING --source-option=--auto-commit
+	if [ -x ./post_build ] ; then ./post_build $(shell realpath $(packagedir)) ; fi
 
 ifeq ($(type),native)
 $(origtargz): clean
