--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,8 @@ Build-Depends:
  dpkg (>= 1.17.14),
  fakeroot <!nocheck>,
  file <!nocheck>,
+ gcc-mingw-w64-i686 <!nocheck>,
+ gcc-mingw-w64-x86-64 <!nocheck>,
  gettext <!nocheck>,
  gpg <!nocheck>,
  gpg-agent <!nocheck>,
@@ -67,6 +69,7 @@ Build-Depends:
  libxml-simple-perl <!nocheck>,
  libyaml-libyaml-perl <!nocheck>,
  man-db <!nocheck>,
+ mingw-w64-tools <!nocheck>,
  node-uglify <!nocheck>,
  patchutils <!nocheck>,
  perl <!nocheck>,
