Ensure libpath-tiny-perl is installed regardless of nocheck build profile as it is needed to generate the Pod documentation.

--- a/debian/control
+++ b/debian/control
@@ -49,7 +49,7 @@ Build-Depends:
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
  libparse-debianchangelog-perl <!nocheck>,
- libpath-tiny-perl <!nocheck>,
+ libpath-tiny-perl,
  libtest-minimumversion-perl <!nocheck>,
  libtest-perl-critic-perl <!nocheck>,
  libtest-pod-coverage-perl <!nocheck>,
