--- a/debian/control
+++ b/debian/control
@@ -34,7 +34,7 @@ Build-Depends:
  javahelper <!nocheck>,
  libapt-pkg-perl <!nocheck>,
  libarchive-zip-perl <!nocheck>,
- libcapture-tiny-perl,
+ libcapture-tiny-perl <!nocheck>,
  libcgi-pm-perl <!nocheck>,
  libclass-accessor-perl <!nocheck>,
  libclone-perl <!nocheck>,
@@ -104,6 +104,7 @@ Depends:
  intltool-debian,
  libapt-pkg-perl,
  libarchive-zip-perl,
+ libcapture-tiny-perl,
  libcgi-pm-perl,
  libclass-accessor-perl,
  libclone-perl,
