Add missing runtime dependency on libtry-tiny-perl. (Closes: #923262)

--- a/debian/control
+++ b/debian/control
@@ -119,6 +119,7 @@ Depends:
  libpath-tiny-perl,
  libtext-levenshtein-perl,
  libtimedate-perl,
+ libtry-tiny-perl,
  liburi-perl,
  libxml-simple-perl,
  libyaml-libyaml-perl,
