Add runtime dependency Depends: liblist-compare-perl to d/control.
The library is already a build dependency.

Gpb-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -116,6 +116,7 @@ Depends:
  libfile-basedir-perl,
  libio-async-perl,
  libipc-run-perl,
+ liblist-compare-perl,
  liblist-moreutils-perl,
  libparse-debianchangelog-perl,
  libpath-tiny-perl,
