Add Depends: and Build-Depends: libmoo-perl, libtype-tiny-perl to d/control.
Together, both modules provide more features and more flexibility than
Class::Accessor::Fast. They create fault-tolerance when dealing with
instance attributes. Using accessors with type validation on inputs is
much safer that using hash references directly.

These modules are available all the way back to oldstable.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -48,6 +48,7 @@ Build-Depends:
  libipc-run-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
+ libmoo-perl <!nocheck>,
  libparse-debianchangelog-perl <!nocheck>,
  libpath-tiny-perl,
  libtest-minimumversion-perl <!nocheck>,
@@ -64,6 +65,7 @@ Build-Depends:
  libtext-template-perl <!nocheck>,
  libtimedate-perl <!nocheck>,
  libtry-tiny-perl <!nocheck>,
+ libtype-tiny-perl <!nocheck>,
  libunicode-utf8-perl <!nocheck>,
  liburi-perl <!nocheck>,
  libxml-libxml-perl <!nocheck>,
@@ -118,11 +120,13 @@ Depends:
  libipc-run-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
+ libmoo-perl,
  libparse-debianchangelog-perl,
  libpath-tiny-perl,
  libtext-levenshtein-perl,
  libtimedate-perl,
  libtry-tiny-perl,
+ libtype-tiny-perl,
  liburi-perl,
  libxml-simple-perl,
  libyaml-libyaml-perl,
